--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,27 @@ h1 {
   font-size: 40px;
 }
 
+#chips {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+h3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+}
+
 #dealer-side > h3 {
   display: flex;
   justify-content: center;
   font-size: 25px;
 }
 
-#dealer-message {
+#dealer-message,
+#player-message {
   display: flex;
   justify-content: center;
 }
@@ -47,7 +61,9 @@ h1 {
 }
 
 #dealer-card-one,
-#dealer-card-two {
+#dealer-card-two,
+#player-card-one,
+#player-card-two {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -55,5 +71,41 @@ h1 {
   border: 1px solid black;
   height: 230px;
   width: 150px;
+}
+
+#dealer-cards,
+#player-cards {
+  display: flex;
+  justify-content: center;
   
+}
+
+#d-card-total {
+  display: flex;
+  justify-content: left;
+}
+
+#hit,
+#stand {
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  padding: 10px 16px;
+  border: 1px solid rgba(0, 0, 0, .3);
+  background-color: white;
+}
+
+#deal {
+  margin-top: 30px;
+  height: 40px;
+  width: 60px;
+}
+
+.chips {
+  display: flex;
+  align-items: center;
+  border-radius: 50%;
+  height: 90px;
+  width: 90px;
+  text-align: center;
 }
