--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,29 @@ html {
 
 body {
   background-color: green;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+}
+
+section {
+  /* max-height: 20%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
-  display: flex;
-  justify-content: center;
-  font-size: 40px;
+  margin: 8px;
+  font-size: 35px;
+}
+
+h2, p {
+  font-size: 20px;
+  margin: 8px;
 }
 
 #chips {
@@ -30,6 +47,11 @@ h3 {
   justify-content: center;
   align-items: center;
   font-size: 25px;
+  margin: 8px;
+}
+
+#dealer-side, #player-side {
+  flex-direction: column;
 }
 
 #dealer-side > h3 {
@@ -52,7 +74,8 @@ h3 {
 
 #hit-stand-buttons {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  width: 400px;
 }
 
 #place-bet {
@@ -67,17 +90,18 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: gray;
-  border: 1px solid black;
-  height: 230px;
-  width: 150px;
+  /* background-color: gray; */
+  /* border: 1px solid black; */
+  /* height: 230px; */
+  /* width: 150px; */
+  margin-bottom: 20px;
 }
 
 #dealer-cards,
 #player-cards {
   display: flex;
   justify-content: center;
-  
+  /* height: 50%; */
 }
 
 #d-card-total {
