--- a/css/style.css
+++ b/css/style.css
@@ -120,12 +120,17 @@ h3 {
 
 #hit,
 #stand {
-  height: 70px;
-  width: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  width: 80px;
   border-radius: 50%;
   padding: 10px 16px;
-  border: 1px solid rgba(0, 0, 0, .3);
+  border: 3px solid rgba(0, 0, 0, .3);
   background-color: white;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 #p-card-total,
