--- a/css/style.css
+++ b/css/style.css
@@ -169,4 +169,21 @@ h3 {
   height: 90px;
   width: 90px;
   text-align: center;
+  margin-top: 0;
+  padding-top: 0;
+}
+
+h4,
+#dollar-amount {
+  font-size: 25px;
+}
+
+h4 {
+  padding-right: 15px;
+}
+
+#bank {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border-bottom: 0;
 }
