--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,9 @@ h1 {
 h2, p {
   font-size: 20px;
   margin: 8px;
+  font-weight: bold;
 }
+
 
 #chips {
   display: flex;
@@ -65,13 +67,15 @@ h3 {
 #player-message {
   display: flex;
   justify-content: center;
+  font-size: 30px;
 }
 
-/* #deal {
-  display: flex;
-  justify-content:center ;
-  align-items: center;
-} */
+#bet-amt {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+
 
 #hit-stand-buttons {
   display: flex;
@@ -91,10 +95,6 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* background-color: gray; */
-  /* border: 1px solid black; */
-  /* height: 230px; */
-  /* width: 150px; */
   margin-bottom: 20px;
 }
 
@@ -111,6 +111,8 @@ h3 {
 #player-cards {
   margin-bottom: 0px;
   padding-bottom: 0;
+  font-size: 30px;
+  font-weight: bold;
 }
 
 #d-card-total {
@@ -160,6 +162,9 @@ h3 {
   margin-top: 30px;
   height: 40px;
   width: 60px;
+  font-weight: bold;
+  font-size: 15px;
+  border-radius: 24px;
 }
 
 .chips {
@@ -186,4 +191,15 @@ h4 {
   margin-bottom: 0;
   padding-bottom: 0;
   border-bottom: 0;
+}
+
+#play-again {
+  font-size: 15px;
+  font-weight: bold;
+  height: 30px;
+  border-radius: 24px;
+}
+
+#bet-amount {
+  height: 25px;
 }
