--- a/css/style.css
+++ b/css/style.css
@@ -217,10 +217,10 @@ h5 {
 @media only screen and (max-height: 1024px) and (max-width: 800px) {
   body{
     max-height: 100vh;
-    margin-top: 0;
+    margin-top: -30px;
     border: 0;
     padding: 0;
-    position:fixed;
+    position:absolute;
   }
   .card-container {
     height: 50px
